--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1,3 +1,22 @@
+#photos {
+  margin: auto;
+}
+
+.photo {
+  width: 100px;
+  height: 100px;
+  margin: 1px;
+  float: left;
+  overflow: hidden;
+}
+.photo img {
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  max-height: 150%;
+}
+
+
 /*
   Ionicons, v1.4.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
