--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -7812,6 +7812,7 @@ body {
       margin: 0 3px 0 0;
       text-align: center;
       background: #34a5c5; }
+/*
   .home_menu ul li:first-child {
     background: #5b8695;
     text-align: center; }
@@ -7831,6 +7832,7 @@ body {
       margin: 0 3px 0 0;
       text-align: center;
       background: none; }
+*/
 
 .home_btn {
   display: block;
